# ComfyUI_Dreamtalk

./: nodes.py  pyproject.toml  requirements.txt
examples/: dream_talk_advanced.json  dream_talk_simple.json
